# FilmPilot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  config.local.env.example  pyproject.toml
app/: __init__.py  config.py  database.py  main.py  mcp_server.py  models.py  schemas.py  version.py
app/services/: agent_retrieval.py  chat.py  checkpoint.py  crew.py  crew_runner.py  crew_runtime.py  crew_tool_executor.py  crew_tools.py  deepseek.py  image_generation.py  orchestrator.py  prompt_strategy.py  rag.py  web_tools.py  workflow.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  test_agent_orchestrator.py  test_api.py  test_asset_images.py  test_chat_models.py  test_chat_service.py  test_config.py  test_deepseek.py  test_rag.py  test_web_tools.py  test_workflow.py
